Lock screen banner
- The banner shows at most twice for devices without lock screen: 1) for the first time there is some non-medical data and 2) for the first time there is some medical data.
- The banner gets dismissed when clicking on the Set lock screen button
  or the dismiss button

https://drive.google.com/file/d/1ECRRkiwHTYkKtsIMPYAh4SBxrqclZI8l/view?usp=sharing&resourcekey=0-Y2bQuuH7HRxV2DXBwXK-6g

Bug: 375384825
Test: atest
Flag: com.android.healthfitness.flags.personal_health_record_lock_screen_banner
Change-Id: I22f2d05e480426416d1349302156bdfdf5f86420

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -1575,6 +1575,12 @@
 
     <!-- endregion -->
 
+    <!-- region Lock screen banner -->
+    <string name="lock_screen_banner_title" description="Title for banner shown when users don't have a device lock screen set up">Set a screen lock</string>
+    <string name="lock_screen_banner_content" description="Content for banner shown when users don't have a device lock screen set up">For added security for your health data, set a PIN, pattern, or password for this device</string>
+    <string name="lock_screen_banner_button" description="Button that takes users to the app store, for banner shown when users only have one available fitness app">Set screen lock</string>
+    <!-- endregion -->
+
     <!-- region Selectable deletion -->
     <string name="select_all" description="Label for a button that selects all data for deletion [CHAR_LIMIT=40]">Select all</string>
     <string name="deletion_confirmation_dialog_body" description="Text for dialog asking the user to confirm they want to delete all data">Connected apps will no longer be able to read this data from Health&#160;Connect</string>
