Privacy dashboard: Build Wear Granular Health Permission Privacy Dashboard
Build UI to enable display "Used by xx apps" and "Accessed xx:xx"

Bug: 364643856
Bug: 364643016
Bug: 364638912
Flag: com.android.healthfitness.flags.replace_body_sensor_permission_enabled
UI figma: go/ah-permissions-figma
Test: atest WearConnectedAppsViewModelTest

Change-Id: Id17899268c04137567b479859a9d4baf859443fe

--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -1681,5 +1681,11 @@
     <string name="manage_fitness_and_wellness_permissions" description="Label for button to manager fitness and wellness permissions for an app.">Manage fitness and wellness permissions</string>
     <!-- endregion -->
 
+    <!-- region Privacy Dashboard  -->
+    <string name="used_by_apps_count" description="Text to indicate how many apps used this permission in past 24 hours.">{count, plural, =1 {Used by 1 app} other {Used by # apps}}</string>
+    <string name="not_used_in_past_24_hours" description="Text to indicate no app used this permission in past 24 hours.">Not used in past 24 hours</string>
+    <string name="accessed" description="Text to indicate last accessed time to a permission.">Accessed <xliff:g example="13:05" id="recent_access_time">%1$s</xliff:g></string>
+    <!-- endregion -->
+
     <!-- endregion -->
 </resources>
