--- a/apk/res/values/strings.xml
+++ b/apk/res/values/strings.xml
@@ -1578,7 +1578,15 @@
     <!-- region Selectable deletion -->
     <string name="select_all" description="Label for a button that selects all data for deletion [CHAR_LIMIT=40]">Select all</string>
     <string name="deletion_confirmation_dialog_body" description="Text for dialog asking the user to confirm they want to delete all data">Connected apps will no longer be able to read this data from Health&#160;Connect</string>
-
+    <string name="a11y_checked" description="A11y title for an entry that has a checkbox showing and the checkbox is checked">Checked</string>
+    <string name="a11y_unchecked" description="A11y title for an entry that has a checkbox showing and the checkbox is not checked">Not checked</string>
+    <string name="a11y_map_description" description="Generic description of map to indicate it is present in an exercise entry view">Exercise map route available</string>
+    <string name="a11y_next_day" description="Content description for the next day button in the entries screen">Next day</string>
+    <string name="a11y_next_week" description="Content description for the next week button in the entries screen">Next week</string>
+    <string name="a11y_next_month" description="Content description for the next month button in the entries screen">Next month</string>
+    <string name="a11y_previous_day" description="Content description for the previous day button in the entries screen">Previous day</string>
+    <string name="a11y_previous_week" description="Content description for the previous week button in the entries screen">Previous week</string>
+    <string name="a11y_previous_month" description="Content description for the previous month button in the entries screen">Previous month</string>
     <!-- region All data -->
     <string name="all_data_selected_deletion_confirmation_dialog" description="Title for dialog asking the user to confirm they want to delete all data">Permanently delete all data?</string>
     <string name="some_data_selected_deletion_confirmation_dialog" description="Title for dialog asking the user to confirm they want to delete some data">Permanently delete selected data?</string>
